Add internal linux firewall cli & examples and Add ansible playbooks to deploy mysql instance

--- a/02-ansible/playbooks/02- kubernetes/k8-sql-instance/mysql-deployment.yaml
+++ b/02-ansible/playbooks/02- kubernetes/k8-sql-instance/mysql-deployment.yaml
@@ -1,4 +1,5 @@
 # Here is a playbook to deploy an sql instance on kubernetes
+# this is not secured, check how to securely store a secret
 
 ####### Mysql-Volume #########
 apiVersion: v1
